--- a/app/src/main/res/layout/activity_content_description.xml
+++ b/app/src/main/res/layout/activity_content_description.xml
@@ -42,31 +42,31 @@
                 android:orientation="horizontal"
                 android:gravity="center">
 
-                <!-- TODO: Add proper accessibility attributes -->
                 <ImageButton
                     android:id="@+id/btn_home"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:src="@drawable/ic_home"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/cd_home_button"
                     android:layout_margin="16dp" />
 
-                <!-- TODO: Add proper accessibility attributes -->
                 <ImageButton
                     android:id="@+id/btn_settings"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:src="@drawable/ic_settings"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/cd_settings_button"
                     android:layout_margin="16dp" />
 
-                <!-- TODO: Add proper accessibility attributes -->
                 <ImageButton
                     android:id="@+id/btn_profile"
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:src="@drawable/ic_profile"
                     android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/cd_profile_button"
                     android:layout_margin="16dp" />
 
             </LinearLayout>
