--- a/app/src/main/res/layout/activity_classic_views.xml
+++ b/app/src/main/res/layout/activity_classic_views.xml
@@ -37,6 +37,13 @@
                 android:layout_marginBottom="8dp"
                 android:text="@string/exercise1_title" />
 
+            <Button
+                android:id="@+id/btn_exercise2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/exercise2_title" />
+
             <!-- More exercise buttons will be added here -->
 
         </LinearLayout>
