--- a/app/src/main/res/layout/activity_classic_views.xml
+++ b/app/src/main/res/layout/activity_classic_views.xml
@@ -51,6 +51,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintWidth_max="320dp" />
 
+            <Button
+                android:id="@+id/btn_exercise4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/exercise4_title"
+                app:layout_constraintTop_toBottomOf="@id/btn_exercise2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintWidth_max="320dp" />
+
             <!-- More exercise buttons will be added here -->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
