--- a/app/src/main/res/layout/activity_form_accessibility.xml
+++ b/app/src/main/res/layout/activity_form_accessibility.xml
@@ -57,6 +57,7 @@
                         android:id="@+id/username_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:hint="@string/username"
                         android:inputType="textEmailAddress" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,6 +73,7 @@
                         android:id="@+id/password_input"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:hint="@string/password"
                         android:inputType="textPassword" />
                 </com.google.android.material.textfield.TextInputLayout>
 
