--- a/app/src/main/res/layout/activity_form_accessibility.xml
+++ b/app/src/main/res/layout/activity_form_accessibility.xml
@@ -59,6 +59,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/username"
+                        android:autofillHints="emailAddress"
                         android:inputType="textEmailAddress" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,6 +77,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/password"
+                        android:autofillHints="password"
                         android:inputType="textPassword" />
                 </com.google.android.material.textfield.TextInputLayout>
 
