--- a/app/src/main/res/layout/activity_focus_management.xml
+++ b/app/src/main/res/layout/activity_focus_management.xml
@@ -95,6 +95,8 @@
             android:fitsSystemWindows="true"
             android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
+            android:accessibilityTraversalAfter="@id/button4"
+            android:accessibilityTraversalBefore="@id/recyclerView"
             app:menu="@menu/bottom_nav_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
