--- a/app/src/main/res/layout/activity_focus_management.xml
+++ b/app/src/main/res/layout/activity_focus_management.xml
@@ -39,6 +39,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
+                android:nextFocusDown="@id/bottomNavigation"
+                android:nextFocusForward="@id/button3"
                 android:text="@string/button_1" />
 
             <Button
@@ -47,6 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
+                android:nextFocusDown="@id/bottomNavigation"
+                android:nextFocusForward="@id/button4"
                 android:text="@string/button_2" />
 
             <Button
@@ -55,6 +59,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
+                android:nextFocusDown="@id/bottomNavigation"
+                android:nextFocusForward="@id/button2"
                 android:text="@string/button_3" />
 
             <Button
@@ -63,6 +69,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:nextFocusDown="@id/bottomNavigation"
+                android:nextFocusForward="@id/bottomNavigation"
                 android:text="@string/button_4" />
 
         </LinearLayout>
@@ -73,6 +81,8 @@
             android:layout_height="0dp"
             android:clipToPadding="false"
             android:contentDescription="@string/list_of_items"
+            android:descendantFocusability="afterDescendants"
+            android:focusable="true"
             android:padding="16dp"
             app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
             app:layout_constraintTop_toBottomOf="@id/buttonContainer" />
@@ -81,7 +91,9 @@
             android:id="@+id/bottomNavigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:descendantFocusability="afterDescendants"
             android:fitsSystemWindows="true"
+            android:focusable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:menu="@menu/bottom_nav_menu" />
 
